--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.4.4",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.3"
   }
 }
